Here's the commented version of the code:

```c++
// Copyright 2023 gRPC authors.

#ifndef GRPCPP_EXT_OTEL_PLUGIN_H
#define GRPCPP_EXT_OTEL_PLUGIN_H

// Include necessary headers for gRPC support, OpenTelemetry, and other utilities
#include <grpc/support/metrics.h>
#include <grpc/support/port_platform.h>
#include <grpcpp/server_builder.h>
#include <grpcpp/support/channel_arguments.h>
#include <stddef.h>
#include <stdint.h>

#include <memory>

#include "absl/functional/any_invocable.h"
#include "absl/status/status.h"
#include "absl/status/statusor.h"
#include "absl/strings/string_view.h"
#include "opentelemetry/context/propagation/text_map_propagator.h"
#include "opentelemetry/metrics/meter_provider.h"
#include "opentelemetry/trace/tracer_provider.h"

namespace grpc {
namespace internal {
// Forward declaration of implementation class
class OpenTelemetryPluginBuilderImpl;
}

// Base class for OpenTelemetry plugin options
class OpenTelemetryPluginOption {
 public:
  virtual ~OpenTelemetryPluginOption() = default;
};

namespace experimental {

// Interface for OpenTelemetry plugin functionality
class OpenTelemetryPlugin {
 public:
  virtual ~OpenTelemetryPlugin() = default;

  // Adds plugin configuration to channel arguments
  virtual void AddToChannelArguments(grpc::ChannelArguments* args) = 0;

  // Adds plugin configuration to server builder
  virtual void AddToServerBuilder(grpc::ServerBuilder* builder) = 0;
};
}

// Builder class for configuring and creating OpenTelemetry plugins
class OpenTelemetryPluginBuilder {
 public:
  // Type alias for channel scope used in metrics
  using ChannelScope = grpc_core::experimental::StatsPluginChannelScope;

  // Constants for standard gRPC OpenTelemetry metric names
  static constexpr absl::string_view kClientAttemptStartedInstrumentName =
      "grpc.client.attempt.started";
  static constexpr absl::string_view kClientAttemptDurationInstrumentName =
      "grpc.client.attempt.duration";
  static constexpr absl::string_view
      kClientAttemptSentTotalCompressedMessageSizeInstrumentName =
          "grpc.client.attempt.sent_total_compressed_message_size";
  static constexpr absl::string_view
      kClientAttemptRcvdTotalCompressedMessageSizeInstrumentName =
          "grpc.client.attempt.rcvd_total_compressed_message_size";
  static constexpr absl::string_view kServerCallStartedInstrumentName =
      "grpc.server.call.started";
  static constexpr absl::string_view kServerCallDurationInstrumentName =
      "grpc.server.call.duration";
  static constexpr absl::string_view
      kServerCallSentTotalCompressedMessageSizeInstrumentName =
          "grpc.server.call.sent_total_compressed_message_size";
  static constexpr absl::string_view
      kServerCallRcvdTotalCompressedMessageSizeInstrumentName =
          "grpc.server.call.rcvd_total_compressed_message_size";

  OpenTelemetryPluginBuilder();
  ~OpenTelemetryPluginBuilder();

  // Sets the meter provider for metrics collection
  OpenTelemetryPluginBuilder& SetMeterProvider(
      std::shared_ptr<opentelemetry::metrics::MeterProvider> meter_provider);

  // Deprecated method for setting target attribute filter
  GRPC_DEPRECATED(
      "Does not work as expected. Please raise an issue on "
      "https://github.com/grpc/grpc if this would be of use to you.")
  OpenTelemetryPluginBuilder& SetTargetAttributeFilter(
      absl::AnyInvocable<bool(absl::string_view ) const>
          target_attribute_filter);

  // Sets filter for generic method attributes
  OpenTelemetryPluginBuilder& SetGenericMethodAttributeFilter(
      absl::AnyInvocable<bool(absl::string_view ) const>
          generic_method_attribute_filter);

  // Enables specific metrics by name
  OpenTelemetryPluginBuilder& EnableMetrics(
      absl::Span<const absl::string_view> metric_names);
  // Disables specific metrics by name
  OpenTelemetryPluginBuilder& DisableMetrics(
      absl::Span<const absl::string_view> metric_names);
  // Disables all metrics collection
  OpenTelemetryPluginBuilder& DisableAllMetrics();

  // Adds a custom plugin option
  OpenTelemetryPluginBuilder& AddPluginOption(
      std::unique_ptr<OpenTelemetryPluginOption> option);

  // Adds an optional label to metrics
  OpenTelemetryPluginBuilder& AddOptionalLabel(
      absl::string_view optional_label_key);

  // Sets the tracer provider for tracing
  OpenTelemetryPluginBuilder& SetTracerProvider(
      std::shared_ptr<opentelemetry::trace::TracerProvider> tracer_provider);

  // Sets the text map propagator for context propagation
  OpenTelemetryPluginBuilder& SetTextMapPropagator(
      std::unique_ptr<opentelemetry::context::propagation::TextMapPropagator>
          text_map_propagator);

  // Creates a gRPC-specific trace binary text map propagator
  static std::unique_ptr<opentelemetry::context::propagation::TextMapPropagator>
  MakeGrpcTraceBinTextMapPropagator();

  // Sets filter for channel scopes
  OpenTelemetryPluginBuilder& SetChannelScopeFilter(
      absl::AnyInvocable<bool(const ChannelScope& ) const>
          channel_scope_filter);

  // Builds and registers the plugin globally
  absl::Status BuildAndRegisterGlobal();

  // Builds the plugin and returns it (does not register globally)
  GRPC_MUST_USE_RESULT
  absl::StatusOr<std::shared_ptr<experimental::OpenTelemetryPlugin>> Build();

 private:
  // Pimpl pattern implementation
  std::unique_ptr<internal::OpenTelemetryPluginBuilderImpl> impl_;
};

namespace experimental {

// Deprecated alias for backward compatibility
GRPC_DEPRECATED(
    "Use grpc::OpenTelemetryPluginBuilder instead. The experimental version "
    "will be deleted after the 1.62 release.")
typedef grpc::OpenTelemetryPluginBuilder OpenTelemetryPluginBuilder;
}

}

#endif
```

The comments added explain:
1. The purpose of each class and namespace
2. The functionality of each method
3. The meaning of important constants
4. The purpose of each configuration option
5. Deprecation notices and their implications
6. The use of the Pimpl pattern in the implementation

The comments are designed to help future developers understand:
- What the code does
- How to use the API
- Important implementation details
- Deprecation warnings and migration paths
- The relationship between different components